final content implemented

--- a/boilerplate/aboutUs.html
+++ b/boilerplate/aboutUs.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">About Us</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">About Us</li>
 				</ol>
 			</div>
@@ -39,21 +39,7 @@
 			<div class="container">
 				<section>
 					<div class="row">
-						<div class="col-md-6">
-							<p>
 							<p>AttainX is a EDWOSB, we specialize in Information Technology Solutions, our expertise is in Software Application Development, Cyber Security solutions, Big Data, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
-						</div>
-						<div class="col-md-6">
-							<div class="featured-video">
-								<!--<iframe src="//player.vimeo.com/video/40056491"></iframe>-->
-                <video width="100%" controls>
-                  <source src="img/adobe-stock/AdobeStock_42019667_Video_HD_Preview.mp4" type="video/mp4">
-                  Your browser does not support HTML5 video.
-                </video>
-
-							</div>
-
-						</div>
 					</div>
 					<br>
 					<hr>
@@ -150,7 +136,7 @@ Our commitment to quality and delivery:  Our  team has the passion and determina
 				<!-- END TEAM -->
 				<!-- OUR CLIENTS -->
 		<section id="ourClients">
-			
+
 		</section>
 		<!-- END OUR CLIENTS -->
 			</div>
