--- a/boilerplate/bigData.html
+++ b/boilerplate/bigData.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Big Data</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Big Data</li>
 				</ol>
 			</div>
@@ -95,7 +95,7 @@
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
