--- a/boilerplate/careers.html
+++ b/boilerplate/careers.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Careers</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Careers</li>
 				</ol>
 			</div>
@@ -36,15 +36,28 @@
 		<!-- END BREADCRUMBS -->
 		<div class="page-content">
             <div class="container">
-                <div class="row">
-                   <p>
-                     Please send your resume to hr@attainx.com
-                   </p>      
-               </div>
+              <div class="row">
+      					<div class="col-md-9">
+                  <div class="featured-image">
+    					        <a href="#"><img src="img/adobe-stock/career-main-75954765.jpg" class="img-responsive" alt="featured-image" /></a>
+    					    </div>
+
+                  <p>
+                    Please send your resume to hr@attainx.com
+                  </p>
+      						<br>
+
+      					</div>
+      					<div class="col-md-3" id="rightColumn">
+      						<!-- RIGHT SIDEBAR CONTENT -->
+
+      						<!-- END RIGHT SIDEBAR CONTENT -->
+      					</div>
+      				</div>
             </div>
         </div>
 		<div id="footer"></div>
- 
+
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/slick.min.js"></script>
