--- a/boilerplate/clients.html
+++ b/boilerplate/clients.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Clients</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Clients</li>
 				</ol>
 			</div>
@@ -75,20 +75,20 @@
                                 <li>
                                     <a href="#"><img src="img/plateau-logo.png" alt="logo"></a>
                                 </li>
-                                
+
                                 <li>
                                     <a href="#"><img src="img/usda-logo.png" alt="logo"></a>
                                 </li>
                             </ul>
                         </div>
-	
+
 					</section>
 					<!-- END LATEST CERTIFICAITON -->
 				</div>
-			</div>	
-		</div>		
+			</div>
+		</div>
 		<div id="footer"></div>
- 
+
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/slick.min.js"></script>
