--- a/boilerplate/contractVehicles.html
+++ b/boilerplate/contractVehicles.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Contract Vehicles</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Contract Vehicles</li>
 				</ol>
 			</div>
@@ -38,70 +38,36 @@
 		<div class="page-content">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-9">
-					    <div class="featured-image">
-					        <a href="#"><img src="img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
-					    </div>
-						<p>Our Agile teamsproduce virtually flawless code quickly and cost-effectivelyby blending Extreme Programming (XP), Scrum, and Lean practices, and also provide greater ability to deliver a solution which matches what the client needs in a shorter amount of time
-						Agile methodologies have shown improved customer satisfaction as it delivers higher quality products in less time.</p><p>
-						Agile helps to overcome the problems occurred in waterfall methodologies.
-						Agile offers more flexibility, adaptability, cost effectiveness and ensures that requirements are molded around the customers’ needs and that changes are identified early and incorporated when they are least expensive.
-						</p>
-					</div>
-					<div class="col-md-3"id="rightColumn">
-						<!-- RIGHT SIDEBAR CONTENT -->
-						
-						<!-- END RIGHT SIDEBAR CONTENT -->
-					</div>
+          <!-- LATEST CERTIFICAITON -->
+          <section>
+                 <div class="container">
+                      <div class="contractVehicles">
+                        <ul class="clients-block">
+                            <li>
+                                <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="img/gsaoasis.jpg" class="img-responsive" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="img/gsastar.jpg" class="img-responsive" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="img/gsaAlliant.png" class="img-responsive" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="img/seaport.png" class="img-responsive" alt=""></a>
+                            </li>
+                          </ul>
+                          </div>
+                  </div>
+          </section>
+          <!-- END LATEST CERTIFICAITON -->
 				</div>
 			</div>
 		</div>
-		<!-- LATEST CERTIFICAITON -->
-		<section>
-           <div class="container">
-                <h2 class="section-heading certifications-heading">CONTRACT VEHICLES</h2>
-                <div class="contractVehicles">
-                      <div>
-                         <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
-                       </div>
-                      
-                       <div>
-                            <a href="#"><img src="img/gsaoasis.jpg" class="img-responsive" alt=""></a>
-                        </div>
-                        <div>
-                            <a href="#"><img src="img/gsastar.jpg" class="img-responsive" alt=""></a>
-                        </div>
-                        <div>
-                            <a href="#"><img src="img/gsaAlliant.png" class="img-responsive" alt=""></a>
-                        </div>
-                         <div>
-                            <a href="#"><img src="img/seaport.png" class="img-responsive" alt=""></a>
-                        </div>
 
-                </div>
-            </div>
-		</section>
-		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCE4gqZHCYv24tj1_YLv4eNd6C_omyecZQ&callback=initMap" type="text/javascript"></script>
- <script>
- 	function initMap() {
-    var latLng = new google.maps.LatLng(37.415116,-79.144288),
-        myOptions = {
-            zoom: 8,
-            center: latLng,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        },
-        map = new google.maps.Map(document.getElementById('map-canvas'), myOptions),
-        markerA = new google.maps.Marker({
-            position: latLng,
-            title: "Attainx Office",
-            map: map
-        });
-}
-
-initMap();
- </script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/slick.min.js"></script>
