--- a/boilerplate/devops.html
+++ b/boilerplate/devops.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Devops</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Devops</li>
 				</ol>
 			</div>
@@ -45,13 +45,13 @@
 						<p>Our main focus is to help our clients transition their business operations to Digital Transformation thru DEVOPS. Our IT dashboard help in enabling our clients Strategic and operational goals. Our shared service model helps DEVOPS culture of collaboration across teams, across various business units and help implement Devops to  benefit the organization.</p>
                         <p>Our process to implement devops:</p>
                         <p>CAPTURE: Idea / bug / enhancement / requirements.</p>
-                        <p>DEPLOY: Automated deployment of code to various environments and finally to production.</p> 
+                        <p>DEPLOY: Automated deployment of code to various environments and finally to production.</p>
                         <p>FEED LOOP:  Our client’s feedback after deployment is quickly integrated into our delivery process,  reduce rework and improve the product or solution.</p>
                         <p>DASHBOARD:  Real time analysis of budget/cost, resource utilization, milestones and risks.  This uses our custom Big Data analytics tools using open source technology.</p>
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
+
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
