--- a/boilerplate/enterpriseArchitecture.html
+++ b/boilerplate/enterpriseArchitecture.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Enterprise Architecture</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Enterprise Architecture</li>
 				</ol>
 			</div>
@@ -44,19 +44,19 @@
 					    </div>
 						<p>Our robust process captures the business logic and integrates the IT capabilities that enables any organization to produce a standard and integrated operating model.</p>
                         <p>Out IT dashboard helps our clients benefit from the EA methodology to reduce costs, invest wisely and increase shared services and implement strategic initiatives.</p>
-                        <p>Our EA team are experienced in implementing DoDAF, MODAF, TOGAF and ZACHMAN architecture frameworks.</p>  
+                        <p>Our EA team are experienced in implementing DoDAF, MODAF, TOGAF and ZACHMAN architecture frameworks.</p>
                         <p>Our main focus to implement an Enterprise Architecture solution is to ensure </p>
                         <ul>
                             <li>REDUCTION IN COST</li>
                             <li>TECHNOLOGY STANDARDIZATION</li>
                             <li>REFINE AND IMPOROCESS BUSINESS PROCESSES</li>
                             <li>ACCOMPLISH SHARED SERVICE AND STRATEGIC ROADMAP.</li>
-                        </ul>      
+                        </ul>
 
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
@@ -64,7 +64,7 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
+
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
