--- a/boilerplate/enterpriseServiceDesk.html
+++ b/boilerplate/enterpriseServiceDesk.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Enterprise Service Desk</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Enterprise Service Desk</li>
 				</ol>
 			</div>
@@ -50,8 +50,8 @@
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
-						
+
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
+
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
