--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -49,13 +49,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3 col-sm-6"><i class="glyphicon glyphicon-tasks"></i>
-						<h3 class="feature-heading">BIG DATA</h3></div>
+						<h3 class="feature-heading">DevOps</h3></div>
 					<div class="col-md-3 col-sm-6"><i class="glyphicon glyphicon-edit"></i>
 						<h3 class="feature-heading">SOFTWARE DEVELOPMENT</h3></div>
-					<div class="col-md-3 col-sm-6"><i class="glyphicon glyphicon-globe"></i>
-						<h3 class="feature-heading">DYNAMIC CHANGE</h3></div>
-					<div class="col-md-3 col-sm-6"><i class="glyphicon glyphicon-phone"></i>
-						<h3 class="feature-heading">MOBILE DEVELOPMENT</h3></div>
+					<div class="col-md-3 col-sm-6"><i class="glyphicon glyphicon-cloud"></i>
+						<h3 class="feature-heading">CLOUD</h3></div>
+					<div class="col-md-3 col-sm-6"><i class="glyphicon glyphicon-lock"></i>
+						<h3 class="feature-heading">CYBER SECURITY</h3></div>
 				</div>
 			</div>
 		</div>
