--- a/boilerplate/contactUs.html
+++ b/boilerplate/contactUs.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Get in touch with us</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Contact Us</li>
 				</ol>
 			</div>
@@ -83,7 +83,7 @@
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
