--- a/boilerplate/dataCenterConsolidation.html
+++ b/boilerplate/dataCenterConsolidation.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Data Center Consolidation</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="boilerplate/index.html">Home</a></li>
 					<li class="active">Data Center Consolidation</li>
 				</ol>
 			</div>
@@ -48,7 +48,7 @@
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
@@ -56,7 +56,7 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
+
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
