--- a/boilerplate/mobility.html
+++ b/boilerplate/mobility.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Mobility</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Mobility</li>
 				</ol>
 			</div>
@@ -49,7 +49,7 @@
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
@@ -57,7 +57,7 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
+
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		 <div id="footer"></div>
