--- a/boilerplate/securitySolutions.html
+++ b/boilerplate/securitySolutions.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<h1 class="page-title pull-left">Security Solutions</h1>
 				<ol class="breadcrumb">
-					<li><a href="http://localhost/attainx/boilerplate/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li class="active">Security Solutions</li>
 				</ol>
 			</div>
@@ -54,7 +54,7 @@
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
-						
+
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
@@ -62,7 +62,7 @@
 		</div>
 		<!-- LATEST CERTIFICAITON -->
 		<section id="certifications">
-			
+
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
