final content implemented with Manoj

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -69,7 +69,7 @@
             <p>Attainx delivers information technology solutions to federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions, We also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
 					</div>
 					<div class="col-md-6">
-						<img src="img/adobe-stock/home-main-119981328.png" class="img-responsive" alt="Image Intro">
+						<img src="img/adobe-stock/home-main-119981328.jpg" class="img-responsive" alt="Image Intro">
 					</div>
 				</div>
 			</div>
@@ -120,26 +120,26 @@
 				<div class="row">
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
-							<i class="fa fa-rocket pull-left"></i>
-							<p>6+ <span>CERTIFICATIONS</span></p>
+							<i class="glyphicon glyphicon-dashboard pull-left"></i>
+							<p><span>IT DASHBOARD</span></p>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
 							<i class="fa fa-cubes pull-left"></i>
-							<p>273 <span>PROJECTS</span></p>
+							<p><span>INNOVATION</span></p>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
 							<i class="fa fa-thumbs-up pull-left"></i>
-							<p>640K <span>APPRECIATIONS</span></p>
+							<p><span>RELIABILITY</span></p>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
-							<i class="fa fa-users pull-left"></i>
-							<p>132 <span>CLIENTS</span></p>
+							<i class="fa fa-trophy pull-left"></i>
+							<p><span>EXCELLENCE</span></p>
 						</div>
 					</div>
 				</div>
