google map changes

--- a/boilerplate/advisoryBoard.html
+++ b/boilerplate/advisoryBoard.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-					<h1 class="page-title pull-left">Our Advisor</h1>
+					<h1 class="page-title pull-left">Our Advisors</h1>
 				<ol class="breadcrumb">
 					<li><a href=index.html">Home</a></li>
-					<li class="active">Advisor</li>
+					<li class="active">Our Advisors</li>
 				</ol>
 			</div>
 		</div>
