--- a/boilerplate/cloud.html
+++ b/boilerplate/cloud.html
@@ -113,7 +113,7 @@
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
 		<div id="footer"></div>
- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuduETpogRjq2c2P-hTTGjiCSE6Qy3k3Q&callback=initMap" type="text/javascript"></script>
+ <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCuduETpogRjq2c2P-hTTGjiCSE6Qy3k3Q&callback=initMap" type="text/javascript"></script>
  <script>
  	function initMap() {
     var latLng = new google.maps.LatLng(37.415116,-79.144288),
