--- a/boilerplate/contactUs.html
+++ b/boilerplate/contactUs.html
@@ -90,7 +90,7 @@
 			</div>
 		</div>
 		<div id="footer"></div>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuduETpogRjq2c2P-hTTGjiCSE6Qy3k3Q&callback=initMap" type="text/javascript"></script>
+    <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCuduETpogRjq2c2P-hTTGjiCSE6Qy3k3Q&callback=initMap" type="text/javascript"></script>
 
  <script>
  	function initMap() {
