--- a/boilerplate/erp.html
+++ b/boilerplate/erp.html
@@ -29,7 +29,7 @@
 				<h1 class="page-title pull-left">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li class="active">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</li>
+					<li class="active">ERP</li>
 				</ol>
 			</div>
 		</div>
@@ -79,6 +79,7 @@
 }
 
 initMap();
+//google.maps.event.addDomListener(window, "load", initMap);
  </script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
