took out map from some pages

--- a/boilerplate/contactUs.html
+++ b/boilerplate/contactUs.html
@@ -81,10 +81,16 @@
 						</div>
 						<!-- END CONCTACT FORM -->
 					</div>
-					<div class="col-md-3" id="rightColumn">
-						<!-- RIGHT SIDEBAR CONTENT -->
-
-						<!-- END RIGHT SIDEBAR CONTENT -->
+					<div class="col-md-3">
+					<!-- RIGHT SIDEBAR CONTENT -->
+					  <div id="rightColumn"></div>	
+					  <div class="widget">
+					    <h3 class="widget-title">GETTING THERE</h3>
+					    <div class="google-map sidebar-map">
+					        <div id="map-canvas"></div>
+					    </div>
+					  </div>
+					  <!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
 			</div>
