--- a/boilerplate/bigData.html
+++ b/boilerplate/bigData.html
@@ -91,7 +91,12 @@
                     <li>Quick access</li>
                     <li>Open Source</li>
                     </ul>
-
+                    <div class="featured-image">
+      					        <img src="img/bigdata1.png" class="img-responsive" alt="featured-image" />
+      					    </div>
+                    <div class="featured-image">
+      					        <img src="img/bigdata2.png" class="img-responsive" alt="featured-image" />
+      					    </div>
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
@@ -106,25 +111,6 @@
 		</section>
 		<!-- END LATEST CERTIFICAITON -->
     <div id="footer"></div>
-    <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCuduETpogRjq2c2P-hTTGjiCSE6Qy3k3Q&callback=initMap" type="text/javascript"></script>
- <script>
-    function initMap() {
-    var latLng = new google.maps.LatLng(37.415116,-79.144288),
-        myOptions = {
-            zoom: 8,
-            center: latLng,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        },
-        map = new google.maps.Map(document.getElementById('map-canvas'), myOptions),
-        markerA = new google.maps.Marker({
-            position: latLng,
-            title: "Attainx Office",
-            map: map
-        });
-}
-
-initMap();
- </script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/slick.min.js"></script>
