changes as per qa

--- a/boilerplate/enterpriseArchitecture.html
+++ b/boilerplate/enterpriseArchitecture.html
@@ -43,7 +43,7 @@
 					        <a href="#"><img src="img/adobe-stock/recruitment-main-82905173.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
 						<p>Our robust process captures the business logic and integrates the IT capabilities that enables any organization to produce a standard and integrated operating model.</p>
-                        <p>Out IT dashboard helps our clients benefit from the EA methodology to reduce costs, invest wisely and increase shared services and implement strategic initiatives.</p>
+                        <p>Our IT dashboard helps our clients benefit from the EA methodology to reduce costs, invest wisely and increase shared services and implement strategic initiatives.</p>
                         <p>Our EA team are experienced in implementing DoDAF, MODAF, TOGAF and ZACHMAN architecture frameworks.</p>
                         <p>Our main focus to implement an Enterprise Architecture solution is to ensure </p>
                         <ul>
