--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -66,7 +66,7 @@
 					<div class="col-md-6">
 						<h2 class="section-heading">KNOW ATTANIX</h2>
 						<p class="lead">AttainX Inc., is a SBA Certified 8a, Hubzone, EDWOSB/WOSB small business. AttainX is also a Virginia SWAM Certified and ISO 9001:2008 certified company.</p>
-            <p>Attainx delivers information technology solutions to federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions, We also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
+            <p>Attainx delivers information technology solutions to federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions, we also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
 					</div>
 					<div class="col-md-6">
 						<img src="img/adobe-stock/home-main-119981328.jpg" class="img-responsive" alt="Image Intro">
@@ -83,7 +83,7 @@
 						<div class="boxed-content left-aligned left-boxed-icon">
 							<i class="fa fa-flag"></i>
 							<h2 class="boxed-content-title">OUR GOAL</h2>
-							<p>Our passion is to excel in our performance excellence. We exceed in our commitment to our clients in terms of technology, people and services our passion is to build a partnership with our Client to deliver the state of art technology and help cut development, operational and maintenance costs. This goal enables us to be a provide world class service.</p>
+							<p>Our passion is to excel in our performance excellence. We exceed in our commitment to our clients in terms of technology, people and services our passion is to build a partnership with our Client to deliver the state of art technology and help cut development, operational and maintenance costs. This goal enables us to provide world class service.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
@@ -97,7 +97,7 @@
 						<div class="boxed-content left-aligned left-boxed-icon">
 							<i class="fa fa-cog"></i>
 							<h2 class="boxed-content-title">FLEXIBLE</h2>
-							<p>Our clients’ needs are unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the client’s business needs. Our custom IT dashboard provides our clients real time access to their IT Budget/ IT spend, resource utilization and optimization, current status and upcoming milestones.</p>
+							<p>Our client’s needs are unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the client’s business needs. Our custom IT dashboard provides our clients real time access to their IT Budget/ IT spend, resource utilization and optimization, current status and upcoming milestones.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
@@ -152,7 +152,7 @@
 				<div class="testimonial slick-carousel">
 					<div class="testimonial-container">
 						<div class="testimonial-body">
-							<p>AttainX is a EDWOSB, we specialize in Information Technology Solutions, our expertise is in Software Application Development, Cyber Security solutions, Big Data, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
+							<p>AttainX Inc., is a SBA Certified 8a, Hubzone,EDWOSB, we specialize in Information Technology Solutions, our expertise is in Software Application Development, Cyber Security solutions, Big Data, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
 						</div>
 					</div>
 				</div>
