added text justify

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -80,28 +80,28 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
+						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-flag"></i>
 							<h2 class="boxed-content-title">OUR GOAL</h2>
 							<p>Our passion is to excel in our performance excellence. We exceed in our commitment to our clients in terms of technology, people and services our passion is to build a partnership with our Client to deliver the state of art technology and help cut development, operational and maintenance costs. This goal enables us to provide world class service.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
+						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-globe"></i>
 							<h2 class="boxed-content-title">OUR TEAM</h2>
 							<p>We have highly skilled and experienced team with delivery experience in federal and state, our passion is to work with our client in their mission and deliver the best of skills that leads our client to flawless delivery and success at a lower cost. Our commitment to quality and delivery makes us different, our team has the passion and determination to deliver quality and exceptional outcomes that help our client maintain quality standards and achieve, ISO, CMMI and ITIL</p>
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
+						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-cog"></i>
 							<h2 class="boxed-content-title">FLEXIBLE</h2>
 							<p>Our client’s needs are unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the client’s business needs. Our custom IT dashboard provides our clients real time access to their IT Budget/ IT spend, resource utilization and optimization, current status and upcoming milestones.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="boxed-content left-aligned left-boxed-icon">
+						<div class="boxed-content left-aligned text-justify left-boxed-icon">
 							<i class="fa fa-users"></i>
 							<h2 class="boxed-content-title">ADVISORY BOARD</h2>
 							<p>AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidance, and direction on future next steps for AttainX, offer thought leadership for innovative products and solutions that AttainX is building on Big Data, Analytics, Cyber Securty, Enterprise Architecture, Mobility and Cloud.</p>
