QA changes done

--- a/boilerplate/agileSoftwareDevelopment.html
+++ b/boilerplate/agileSoftwareDevelopment.html
@@ -26,10 +26,10 @@
                   <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">Services - Agile Software Development</h1>
+				<h1 class="page-title pull-left">Agile Software Development</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li class="active">Services - Agile Software Development</li>
+					<li class="active">Agile Software Development</li>
 				</ol>
 			</div>
 		</div>
