--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -64,12 +64,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<h2 class="section-heading">KNOW ATTANIX</h2>
 						<p class="lead">AttainX Inc., is a SBA Certified 8a, Hubzone, EDWOSB/WOSB small business. AttainX is also a Virginia SWAM Certified and ISO 9001:2008 certified company.</p>
             <p>Attainx delivers information technology solutions to federal and state agencies. Our expertise is in software application development, testing, maintenance, cloud application offerings and migration to cloud technologies, enterprise architecture, cyber security, big data, enterprise service desk and IV&amp;V solutions, we also specialize in ERP Implementation, maintenance and digital transformation of existing business processes. Our goal is to provide our clients the highest ROI with leading edge and cost-effective solutions to support the goals and mission of our clients.</p>
 					</div>
 					<div class="col-md-6">
-						<img src="img/adobe-stock/home-main-119981328.jpg" class="img-responsive" alt="Image Intro">
+						<img src="img/it-dashboard.png" class="img-responsive" alt="Image Intro">
 					</div>
 				</div>
 			</div>
