added changes for cyber security page

--- a/boilerplate/cyberSecurity.html
+++ b/boilerplate/cyberSecurity.html
@@ -42,9 +42,23 @@
 					    <div class="featured-image">
 					        <a href="#"><img src="img/adobe-stock/recruitment-main-82905173.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
-						<p>AttanX  has a very comprehensive Cyber Security practice,  our process entails a methodology which starts with Identifying threats, reviewing the security measures, and build a very robust iron dome security strategy.</p>
-                        <p>Our consultant have vast experience and our mail goal is to engage with our customers, understand the current state and propose applying controls to the device or node.</p>
-
+						<p>AttainX Cyber Security team provide industry-leading security solutions for corporations seeking to protect their data from unwanted intrusions, to predict attacks, proactively respond to threats, ensure compliance, and protect data, infrastructure, applications.</p>
+						<p>Our Cyber Security Professionals advise on your cybersecurity strategy depending on your current level of maturity to help you define your security perimeter, objectives and procedures as we know to review your companies cyber security posture and help you make informed decisions on how to determine your  threat level and how to mitigate them.</p>
+						<p>Our Cyber Security team does with testing for security loops, tightening your chance to get hacked and projecting your assets with best solution in cyber security. We develop a culture of security-mindful professionals across the community striving to be more flexible and responsive to new regulatory directives by ensuring information system survivability and integrity.</p>
+						<p>AttainX’s objectives on Cybersecurity program.</p>
+						<ul> 
+						<li>Monitoring security systems including IDS and firewalls.
+						</li>
+						<li>Ensure all new information technology (IT) projects meet or integrate security standards into their development.</li>
+						<li>Perform gap analysis on current security infrastructure.</li>
+						<li>Ensure information system survivability and integrity.</li>
+						<li>Optimize processes to meet IT security-related goals and strategies.</li>
+						<li>Monitoring mobile threat platforms.</li>
+						<li>Conducting analysis of active and potential virtual server problems, and providing recommendations for their resolution.</li>
+						<li>Review and revise security procedures and policies as needed.</li>
+						<li>Assist in the analysis of correlated events and their resolution.</li>
+						<li>Integrate regulations and standards into a fully implementable security program.</li>
+                        </ul>
 					</div>
 					<div class="col-md-3" id="rightColumn">
 						<!-- RIGHT SIDEBAR CONTENT -->
